test/test_units/test_kclvm/test_types/invalid_test_data/module/module_6.k
import math

a = math.err_func(1)

